--- a/source/html/_popular-goods.html
+++ b/source/html/_popular-goods.html
@@ -21,7 +21,10 @@
             <a href="#" class="tab__link">Задние кресла</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Задние</a>
+            <a href="#" class="tab__link">Задние сиденья</a>
+          </li>
+          <li class="tab__item">
+            <a href="#" class="tab__link">Глушители</a>
           </li>
           <li class="tab__item no-more-link">
             <a href="#">Смотреть все</a>
