--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -1,10 +1,5 @@
 <header class="nav-menu-container">
   <nav class="nav-container">
-    <button class="bobs-burger-menu" aria-label="Открыть меню">
-      <svg width="32" height="32" class="icon-sprite">
-        <use xlink:href="img/iconsprite/icons.svg#_bob-burger-menu"></use>
-      </svg>
-    </button>
     <!-- ! Favourite menu -->
     <ul class="fav-menu">
       <li class="fav-menu__item">
@@ -42,26 +37,34 @@
     <ul class="service-menu">
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Избранное">
-          <svg width="32" height="32" class="icon-sprite">
+          <svg class="icon-sprite">
             <use xlink:href="img/iconsprite/icons.svg#_favouriteItem"></use>
           </svg>
         </a>
       </li>
-      <li class="service-menu__item">
-        <a href="#" class="service-menu__link" aria-labeled="Войти">
-          <svg width="32" height="32" class="icon-sprite">
-            <use xlink:href="img/iconsprite/icons.svg#_userLogin"></use>
-          </svg>
-        </a>
-      </li>
+
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Корзина">
-          <svg width="32" height="32" class="icon-sprite">
+          <svg class="icon-sprite">
             <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
           </svg>
         </a>
       </li>
+
+      <li class="service-menu__item">
+        <a href="#" class="service-menu__link" aria-labeled="Войти">
+          <svg class="icon-sprite">
+            <use xlink:href="img/iconsprite/icons.svg#_userLogin"></use>
+          </svg>
+        </a>
+      </li>
     </ul>
+
+    <button class="bobs-burger-menu" aria-label="Открыть меню">
+      <svg width="32" height="32" class="icon-sprite">
+        <use xlink:href="img/iconsprite/icons.svg#_bob-burger-menu"></use>
+      </svg>
+    </button>
 
     <!-- ! Main links, bottom menu -->
     <ul class="nav-menu">
