Мобильный портрет завершен

--- a/source/html/_also-buy.html
+++ b/source/html/_also-buy.html
@@ -1,30 +1,27 @@
-<section class="compl-container">
-  <div class="popular-goods-container">
+<section class="also-buy-container">
+  <div class="also-container">
     <!-- ! Popular goods controls -->
-    <div class="compl-goods">
-      <div class="compl-goods__tab">
+    <div class="also-buy-goods">
+      <div class="also-buy__tab">
         <!-- ! Tabs list -->
         <ul class="tab">
           <li class="tab__item">
-            <h2 class="tab__title">Популярные товары</h2>
+            <h2 class="tab__title">Также покупают</h2>
+          </li>
+          <li class="tab__item tab--right-aligned">
+            <a href="#" class="tab__link">Брелоки</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link tab__link--active">Камеры</a>
+            <a class="tab__link tab__link--active">Камеры</a>
           </li>
           <li class="tab__item">
-            <a class="tab__link">Фары</a>
+            <a href="#" class="tab__link">Тормоза</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Дворники</a>
+            <a href="#" class="tab__link">Жидкости и смазки</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Задние кресла</a>
-          </li>
-          <li class="tab__item">
-            <a href="#" class="tab__link">Задние сиденья</a>
-          </li>
-          <li class="tab__item">
-            <a href="#" class="tab__link">Глушители</a>
+            <a href="#" class="tab__link">Детские кресла</a>
           </li>
           <li class="tab__item no-more-link">
             <a href="#">Смотреть все</a>
