--- a/source/html/_footer.html
+++ b/source/html/_footer.html
@@ -43,7 +43,7 @@
             </svg>
           </button>
         </div>
-        <ul class="footer-menu__list visually-hidden">
+        <ul class="footer-menu__list">
           <li class="footer-menu__item">
             <a href="#" class="footer-menu__link">Компания</a>
           </li>
@@ -68,7 +68,7 @@
             </svg>
           </button>
         </div>
-        <ul class="footer-menu__list visually-hidden">
+        <ul class="footer-menu__list">
           <li class="footer-menu__item">
             <a href="#" class="footer-menu__link">Доставка</a>
           </li>
@@ -93,7 +93,7 @@
             </svg>
           </button>
         </div>
-        <div class="two-columns-container visually-hidden">
+        <div class="two-columns-container">
           <ul class="footer-menu__list two-columns-space">
             <li class="footer-menu__item">
               <a href="#" class="footer-menu__link">Доставка</a>
