--- a/source/html/_hero-slider.html
+++ b/source/html/_hero-slider.html
@@ -13,7 +13,7 @@
         </li>
       </ul>
 
-      <!-- <ul class="slider-pagination">
+      <ul class="slider-pagination">
         <li class="slider-pagination__item slide-pagination__item--active">
           <a href="#" class="slider-pagination__link"></a>
         </li>
@@ -29,8 +29,8 @@
         <li class="slider-pagination__item">
           <a href="#" class="slider-pagination__link"></a>
         </li>
-      </ul> -->
-      <!-- 
+      </ul>
+
       <button
         class="slider__button slider__control-forward back-forward-btn"
         type="button"
@@ -40,17 +40,12 @@
         class="slider__button slider__control-back back-forward-btn"
         type="button"
         aria-label=""
-      ></button> -->
+      ></button>
     </div>
 
     <!-- ! Goods of day -->
     <div class="super-offer">
       <a href="" class="supper-offer-link">
-        <div class="offer-comprasion">
-          <p class="offer-comprasion__new-price">200 ₽</p>
-          <b class="offer-comprasion__old-price">500 ₽</b>
-        </div>
-
         <div class="offer-demonstration">
           <picture class="offer-demonstration__img">
             <source
@@ -65,9 +60,15 @@
               alt="Лампа накаливания"
             />
           </picture>
-          <b class="offer-demonstration__title">
-            Галогенная лампа Philips Premium H7 12V 55W...</b
-          >
+          <div class="offer-demonstration__container">
+            <b class="offer-demonstration__title">
+              Галогенная лампа Philips Premium H7 12V 55W...</b
+            >
+            <div class="offer-comprasion">
+              <b class="offer-comprasion__new-price">200 ₽</b>
+              <p class="offer-comprasion__old-price">500 ₽</p>
+            </div>
+          </div>
         </div>
 
         <div class="offer-action">
