--- a/source/html/_search-form.html
+++ b/source/html/_search-form.html
@@ -27,7 +27,7 @@
         >
         <input
           type="search"
-          placeholder="Введите vin код"
+          placeholder="Введите vin-код"
           id="search-vin-input"
           name="search-input"
           required=""
