--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -37,7 +37,7 @@
     <ul class="service-menu">
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Избранное">
-          <svg class="icon-sprite">
+          <svg class="icon-sprite icon-menu-small">
             <use xlink:href="img/iconsprite/icons.svg#_favouriteItem"></use>
           </svg>
         </a>
@@ -45,7 +45,7 @@
 
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Корзина">
-          <svg class="icon-sprite">
+          <svg class="icon-sprite icon-menu-small">
             <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
           </svg>
         </a>
@@ -53,7 +53,7 @@
 
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Войти">
-          <svg class="icon-sprite">
+          <svg class="icon-sprite icon-menu-small">
             <use xlink:href="img/iconsprite/icons.svg#_userLogin"></use>
           </svg>
         </a>
@@ -61,7 +61,7 @@
     </ul>
 
     <button class="bobs-burger-menu" aria-label="Открыть меню">
-      <svg width="32" height="32" class="icon-sprite">
+      <svg width="32" height="32" class="icon-sprite bobs-burger-menu--size">
         <use xlink:href="img/iconsprite/icons.svg#_bob-burger-menu"></use>
       </svg>
     </button>
@@ -74,8 +74,8 @@
       <li class="nav-menu__item">
         <a href="#" class="nav-menu__link">Молдинги</a>
       </li>
-      <li class="nav-menu__item nav-menu__item--active">
-        <a href="#" class="nav-menu__link">Шины</a>
+      <li class="nav-menu__item">
+        <a href="#" class="nav-menu__link nav-menu__item--active">Шины</a>
       </li>
       <li class="nav-menu__item">
         <a href="#" class="nav-menu__link">Диски</a>
