Добавлен бургер + иконки

--- a/source/html/_all-buy.html
+++ b/source/html/_all-buy.html
@@ -68,21 +68,10 @@
                   class="card__favourite"
                   aria-label="Добавить в избранное"
                 >
-                  <svg
-                    width="27"
-                    height="24"
-                    viewBox="0 0 27 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
-                      stroke="black"
-                      stroke-opacity="0.3"
-                      stroke-width="2"
-                    />
+                  <svg width="24" height="24" class="icon-sprite">
+                    <use
+                      xlink:href="img/iconsprite/icons.svg#_favouriteItem"
+                    ></use>
                   </svg>
                 </button>
 
@@ -92,23 +81,11 @@
                   aria-label="Добавить в корзину"
                   type="button"
                   ><svg
-                    width="22"
-                    height="26"
-                    viewBox="0 0 22 26"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    class="icon-sprite card-icon-btn"
                   >
-                    <path
-                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
-                      fill="#FF7931"
-                    />
-                    <path
-                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
+                    <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
                   </svg>
                 </a>
                 <a href="#" class="card__notify-btn visually-hidden"
@@ -151,21 +128,10 @@
                   class="card__favourite"
                   aria-label="Добавить в избранное"
                 >
-                  <svg
-                    width="27"
-                    height="24"
-                    viewBox="0 0 27 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
-                      stroke="black"
-                      stroke-opacity="0.3"
-                      stroke-width="2"
-                    />
+                  <svg width="24" height="24" class="icon-sprite">
+                    <use
+                      xlink:href="img/iconsprite/icons.svg#_favouriteItem"
+                    ></use>
                   </svg>
                 </button>
 
@@ -174,24 +140,9 @@
                   class="card__buy"
                   aria-label="Добавить в корзину"
                   type="button"
-                  ><svg
-                    width="22"
-                    height="26"
-                    viewBox="0 0 22 26"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
-                      fill="#FF7931"
-                    />
-                    <path
-                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
+                >
+                  <svg width="24" height="24" class="icon-sprite card-icon-btn">
+                    <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
                   </svg>
                 </a>
                 <a href="#" class="card__notify-btn visually-hidden"
@@ -235,21 +186,10 @@
                   class="card__favourite"
                   aria-label="Добавить в избранное"
                 >
-                  <svg
-                    width="27"
-                    height="24"
-                    viewBox="0 0 27 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
-                      stroke="black"
-                      stroke-opacity="0.3"
-                      stroke-width="2"
-                    />
+                  <svg width="24" height="24" class="icon-sprite">
+                    <use
+                      xlink:href="img/iconsprite/icons.svg#_favouriteItem"
+                    ></use>
                   </svg>
                 </button>
 
@@ -259,23 +199,11 @@
                   aria-label="Добавить в корзину"
                   type="button"
                   ><svg
-                    width="22"
-                    height="26"
-                    viewBox="0 0 22 26"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    class="icon-sprite card-icon-btn"
                   >
-                    <path
-                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
-                      fill="#FF7931"
-                    />
-                    <path
-                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
+                    <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
                   </svg>
                 </a>
                 <a href="#" class="card__notify-btn visually-hidden"
@@ -319,21 +247,10 @@
                   class="card__favourite"
                   aria-label="Добавить в избранное"
                 >
-                  <svg
-                    width="27"
-                    height="24"
-                    viewBox="0 0 27 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
-                      stroke="black"
-                      stroke-opacity="0.3"
-                      stroke-width="2"
-                    />
+                  <svg width="24" height="24" class="icon-sprite">
+                    <use
+                      xlink:href="img/iconsprite/icons.svg#_favouriteItem"
+                    ></use>
                   </svg>
                 </button>
 
@@ -343,23 +260,11 @@
                   aria-label="Добавить в корзину"
                   type="button"
                   ><svg
-                    width="22"
-                    height="26"
-                    viewBox="0 0 22 26"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    class="icon-sprite card-icon-btn"
                   >
-                    <path
-                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
-                      fill="#FF7931"
-                    />
-                    <path
-                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
+                    <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
                   </svg>
                 </a>
                 <a href="#" class="card__notify-me">Сообщить о поступлении</a>
