--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -25,7 +25,7 @@
 
     <!-- ! Address -->
     <div class="nav-address">
-      <svg width="32" height="32" class="icon-sprite">
+      <svg class="icon-sprite">
         <use xlink:href="img/iconsprite/icons.svg#_arrowAddress"></use>
       </svg>
       <a href="" class="nav-address__link"
@@ -61,7 +61,7 @@
     </ul>
 
     <button class="bobs-burger-menu" aria-label="Открыть меню">
-      <svg width="32" height="32" class="icon-sprite bobs-burger-menu--size">
+      <svg class="icon-sprite bobs-burger-menu--size">
         <use xlink:href="img/iconsprite/icons.svg#_bob-burger-menu"></use>
       </svg>
     </button>
