--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,8 @@
 		@@include('html/_promo-goods.html')
 		@@include('html/_also-buy.html')
 		@@include('html/_footer.html')
+		
+		@@include('html/_burger-menu.html')
 	
 	</main>
   </body>
