Работате открытие закрытие меню

--- a/source/html/_burger-menu.html
+++ b/source/html/_burger-menu.html
@@ -1,4 +1,4 @@
-<div class="modal-bg">
+<div class="modal-bg visually-hidden">
   <button class="close-burger-menu" type="button" aria-label="Закрыть меню">
     <svg width="24" height="24" class="icon-sprite burger-menu-close-btn">
       <use xlink:href="img/iconsprite/icons.svg#_close"></use>
