--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -61,7 +61,7 @@
     </ul>
 
     <button class="bobs-burger-menu" aria-label="Открыть меню">
-      <svg class="icon-sprite bobs-burger-menu--size">
+      <svg class="icon-sprite icon-menu-small">
         <use xlink:href="img/iconsprite/icons.svg#_bob-burger-menu"></use>
       </svg>
     </button>
