--- a/source/html/_all-buy.html
+++ b/source/html/_all-buy.html
@@ -41,26 +41,23 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/6@1x.webp 1x,
+                      img/index/items/6@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/6@1x.jpg"
+                    srcset="img/index/items/6@2x.jpg 2x"
+                    alt="MarchInn 12V DC 5.0T Electric Hydraulic"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
                 <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                  MarchInn 12V DC 5.0T Electric Hydraulic
                 </h3>
-                <b class="card__price">11 680 ₽</b>
+                <b class="card__price">$3 430</b>
               </div>
 
               <div class="card__btn-container">
@@ -101,26 +98,23 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/7@1x.webp 1x,
+                      img/index/items/7@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/7@1x.jpg"
+                    srcset="img/index/items/7@2x.jpg 2x"
+                    alt="Sunsong 2203856 Brake Hose (Chevrolet, GMC)"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
                 <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                  Griot's Garage 11065 Spray-On Car Wash 35 oz
                 </h3>
-                <b class="card__price">11 680 ₽</b>
+                <b class="card__price">$3 220</b>
               </div>
 
               <div class="card__btn-container">
@@ -159,26 +153,23 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/8@1x.webp 1x,
+                      img/index/items/8@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/8@1x.jpg"
+                    srcset="img/index/items/8@2x.jpg 2x"
+                    alt="Mickey Thompson Sportsman S/R Performance"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
                 <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                  Mickey Thompson Sportsman S/R Performance
                 </h3>
-                <b class="card__price">112 680 ₽</b>
+                <b class="card__price">$2 120</b>
               </div>
 
               <div class="card__btn-container">
@@ -220,26 +211,23 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/9@1x.webp 1x,
+                      img/index/items/9@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/9@1x.jpg"
+                    srcset="img/index/items/9@2x.jpg 2x"
+                    alt="Zoostliss 46pcs 1/4-Inch Socket Set Ca"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
                 <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                  Zoostliss 46pcs 1/4-Inch Socket Set Ca
                 </h3>
-                <b class="card__price card__price--out">11 680 ₽</b>
+                <b class="card__price card__price--out">$11 680</b>
               </div>
 
               <div class="card__btn-container">
