--- a/source/html/_also-buy.html
+++ b/source/html/_also-buy.html
@@ -38,26 +38,23 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/1@1x.webp 1x,
+                      img/index/items/1@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/1@1x.jpg"
+                    srcset="img/index/items/1@2x.jpg 2x"
+                    alt="Security Chain Company SZ139 Super Z6"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
                 <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                  Security Chain Company SZ139 Super Z6
                 </h3>
-                <b class="card__price">11 680 ₽</b>
+                <b class="card__price">$11 680</b>
               </div>
 
               <div class="card__btn-container">
@@ -77,11 +74,7 @@
                   class="card__buy"
                   aria-label="Добавить в корзину"
                   type="button"
-                  ><svg
-                    width="24"
-                    height="24"
-                    class="icon-sprite card-icon-btn"
-                  >
+                  ><svg class="icon-sprite card-icon-btn">
                     <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
                   </svg>
                 </a>
@@ -98,26 +91,23 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/3@1x.webp 1x,
+                      img/index/items/3@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/3@1x.jpg"
+                    srcset="img/index/items/1@2x.jpg 2x"
+                    alt="Autospecialty KOE2073 1-Click OE Replacement Brake Kit"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
                 <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                  Autospecialty KOE2073 1-Click OE Replacement Brake
                 </h3>
-                <b class="card__price">11 680 ₽</b>
+                <b class="card__price">$11 680</b>
               </div>
 
               <div class="card__btn-container">
@@ -156,26 +146,23 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/4@1x.webp 1x,
+                      img/index/items/4@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/4@1x.jpg"
+                    srcset="img/index/items/4@2x.jpg 2x"
+                    alt="Sunsong 2203856 Brake Hose (Chevrolet, GMC)"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
                 <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                  Sunsong 2203856 Brake Hose (Chevrolet, GMC)
                 </h3>
-                <b class="card__price">112 680 ₽</b>
+                <b class="card__price">$112 680</b>
               </div>
 
               <div class="card__btn-container">
@@ -217,26 +204,21 @@
                   <source
                     type="image/webp"
                     srcset="
-                      img/index/lamp@1x.webp 1x,
-                      img/index/lamp@2x.webp 2x
+                      img/index/items/5@1x.webp 1x,
+                      img/index/items/5@2x.webp 2x
                     "
                   />
-                  <!-- 1х: 230px; 2x: 460px -->
                   <img
                     class="card__img"
-                    src="img/index/lamp@1x.jpg"
-                    srcset="img/index/lamp@2x.jpg 2x"
-                    width="171px"
-                    height="201px"
-                    alt="Лампа накаливания"
+                    src="img/index/items/5@1x.jpg"
+                    srcset="img/index/items/5@2x.jpg 2x"
+                    alt="Gates 31836 Locking Fuel Tank Cap"
                   />
                 </picture>
               </div>
               <div class="card__title-container">
-                <h3 class="card__title">
-                  Ширина 205/80 R16 104Q Misha RF Power Grum
-                </h3>
-                <b class="card__price card__price--out">11 680 ₽</b>
+                <h3 class="card__title">Gates 31836 Locking Fuel Tank Cap</h3>
+                <b class="card__price card__price--out">$9 020</b>
               </div>
 
               <div class="card__btn-container">
