--- a/source/html/_hero-slider.html
+++ b/source/html/_hero-slider.html
@@ -47,26 +47,30 @@
     <div class="super-offer">
       <a href="" class="supper-offer-link">
         <div class="offer-demonstration">
-          <picture class="offer-demonstration__img">
-            <source
-              type="image/webp"
-              srcset="img/index/lamp@1x.webp 1x, img/index/lamp@2x.webp 2x"
-            />
-            <img
-              src="img/index/lamp@1x.jpg"
-              srcset="img/index/lamp@2x.jpg 2x"
-              width="150px"
-              height="187px"
-              alt="Лампа накаливания"
-            />
-          </picture>
+          <div class="offer-demonstration__container-img">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="
+                  img/index/items/2@1x.webp 1x,
+                  img/index/items/2@2x.webp 2x
+                "
+              />
+              <img
+                class="offer-demonstration__img"
+                src="img/index/items/2@1x.jpg"
+                srcset="img/index/items/2@2x.jpg 2x"
+                alt="MarchInn 12V DC 5.0T Electric Hydrauli"
+              />
+            </picture>
+          </div>
           <div class="offer-demonstration__container">
             <b class="offer-demonstration__title">
-              Галогенная лампа Philips Premium H7 12V 55W...</b
-            >
+              MarchInn 12V DC 5.0T Electric Hydraulic Ext...
+            </b>
             <div class="offer-comprasion">
-              <b class="offer-comprasion__new-price">200 ₽</b>
-              <p class="offer-comprasion__old-price">500 ₽</p>
+              <b class="offer-comprasion__new-price">$200</b>
+              <p class="offer-comprasion__old-price">$500</p>
             </div>
           </div>
         </div>
